--- a/hieradata/nodes/cpetersen67vf.puppetlabs.vm.yaml
+++ b/hieradata/nodes/cpetersen67vf.puppetlabs.vm.yaml
@@ -1,3 +1,3 @@
 ---
 
-:message:  "this is a test of the override of my hiera message"
+message:  "this is a test of the override of my hiera message"
